--- a/user-guides/src/6.3_substitutes.md
+++ b/user-guides/src/6.3_substitutes.md
@@ -1,3 +1,13 @@
 # Substitutes
 
 ![The substitutes edit page](./images/substitutes.png)
+
+The substitutes edit page allows you to specify the substitutes for a given day.
+
+The date is read-only and specifies what day the substitute list is for.
+Below that, you can use the checkboxes to select which team members you want on the substitute list for that day.
+(You are not required to select any team members.)
+
+Clicking "Save" will save your changes and return you to the schedule week containing the updated substitute list.
+
+Clicking "Cancel" will discard your changes and also return you to the schedule week containing the original substitute list.
