--- a/user-guides/src/3.4_unavailability.md
+++ b/user-guides/src/3.4_unavailability.md
@@ -1,99 +1,124 @@
 # Team Member Unavailability
 
-The unavailability section of the team member pages allow you to specify dates and times a team member is unavailable.
+The unavailability section of the team member pages allow you to specify dates
+and times a team member is unavailable.
 
-Note that this *overrides* a team member's [typical availability](./3.3_availability.md).
+Note that this _overrides_ a team member's
+[typical availability](./3.3_availability.md).
 
 ## Team Member Unavailability Year
 
 ![The team member unavailability year page](./images/unavailability_year.png)
 
-The team member unavailability tab will bring you to an unavailability calendar for the current year.
+The team member unavailability tab will bring you to an unavailability calendar
+for the current year.
 
-The top of the schedule displays the year of the calendar.
-Clicking the year to the left of center year will show the calender for the prior year.
-Clicking the year to the right of the center year will show the calendar for the next year.
+The top of the schedule displays the year of the calendar. Clicking the year to
+the left of center year will show the calender for the prior year. Clicking the
+year to the right of the center year will show the calendar for the next year.
 
-The calendar is arranged by month and shows the day of the week for each day of the month.
-The current date will be also be highlighted in the calendar.
+The calendar is arranged by month and shows the day of the week for each day of
+the month. The current date will be also be highlighted in the calendar.
 
-Clicking on a date in the calendar will bring you to the team member's unavailability for the week of that date.
+Clicking on a date in the calendar will bring you to the team member's
+unavailability for the week of that date.
 
 ## Team Member Unavailability Week
 
 ![The team member unavailability week page](./images/unavailability_week.png)
 
-The unavailability week page lists a team member's unavailability slots for a week.
+The unavailability week page lists a team member's unavailability slots for a
+week.
 
 The buttons near the top have the following functions:
 
-* Week header - Sends you to the unavailability calendar year page for the year the week starts in
-* Left angle bracket - Sends you to the team member's unavailability for the previous week
-* Right angle bracket - Sends you to the team member's unavailability for the next week
-* Clear button - Opens a form to confirm you want to delete all the team member's unavailability slots for the week
+- Week header - Sends you to the unavailability calendar year page for the year
+  the week starts in
+- Left angle bracket - Sends you to the team member's unavailability for the
+  previous week
+- Right angle bracket - Sends you to the team member's unavailability for the
+  next week
+- Clear button - Opens a form to confirm you want to delete all the team
+  member's unavailability slots for the week
 
-Unavailablity slots are grouped and ordered by date, and then ordered by start time.
-If a date does not have unavailability slots, the section will be marked with "(none)".
+Unavailablity slots are grouped and ordered by date, and then ordered by start
+time. If a date does not have unavailability slots, the section will be marked
+with "(none)".
 
 Each unavailability entry contains the following:
 
-* Left: The start time and end time of the unavailability
-* Center: An icon indicating the team member's preference for the unavailability
-  * A smiley face means the team member might be willing to be called in at the time.
-  * A sad face face means the team member is definitely unavailable.
-* Right: Buttons for modifying the unavailability slot
-  * Clicking the pencil icon will open a form for editing the unavailability slot.
-  * Clicking the red "x" icon will open a form to confirm you want to delete the unavailability slot.
+- Left: The start time and end time of the unavailability
+- Center: An icon indicating the team member's preference for the unavailability
+  - A smiley face means the team member might be willing to be called in at the
+    time.
+  - A sad face face means the team member is definitely unavailable.
+- Right: Buttons for modifying the unavailability slot
+  - Clicking the pencil icon will open a form for editing the unavailability
+    slot.
+  - Clicking the red "x" icon will open a form to confirm you want to delete the
+    unavailability slot.
 
 ## Team Member Unavailability Add
 
 ![The team member unavailability add page](./images/unavailability_add.png)
 
-The unavailability add form allows you create an unavailability slot for a team member.
-The fields include:
+The unavailability add form allows you create an unavailability slot for a team
+member. The fields include:
 
-* The date
-* The start time
-* The end time
-* Whether the team member might be willing to be called in
+- The date
+- The start time
+- The end time
+- Whether the team member might be willing to be called in
 
 (The date and times are required.)
 
-Clicking "Save" with valid data will create the unavailability slot for the team member and send you to the unavailability week for the newly added unavailability.
-If the data is invalid, the form will display errors you can correct.
-You can then attempt to save again.
+Clicking "Save" with valid data will create the unavailability slot for the team
+member and send you to the unavailability week for the newly added
+unavailability. If the data is invalid, the form will display errors you can
+correct. You can then attempt to save again.
 
-Clicking "Cancel" at any time will discard your changes and send you back to the unavailability week for the date the unavailability was originally going to be created for.
+Clicking "Cancel" at any time will discard your changes and send you back to the
+unavailability week for the date the unavailability was originally going to be
+created for.
 
 ## Team Member Unavailability Edit
 
 ![The team member unavailability edit page](./images/unavailability_edit.png)
 
 The unavailability edit page allows you to edit an existing unavailability slot.
-It works very similarly to the [unavailability add](#team-member-unavailability-add) page.
+It works very similarly to the
+[unavailability add](#team-member-unavailability-add) page.
 
-Clicking "Save" with valid data will update the unavailability slot and send you to the unavailability week of the updated unavailability.
-If the data is invalid, the form will display errors you can correct.
-You can then attempt to save again.
+Clicking "Save" with valid data will update the unavailability slot and send you
+to the unavailability week of the updated unavailability. If the data is
+invalid, the form will display errors you can correct. You can then attempt to
+save again.
 
-Clicking "Cancel" at any time will discard your changes and send you back to the original unavailability week of the unavailability.
+Clicking "Cancel" at any time will discard your changes and send you back to the
+original unavailability week of the unavailability.
 
 ## Team Member Unavailability Delete
 
 ![The team member unavailability delete page](./images/unavailability_delete.png)
 
-The unavailability delete page allows you to confirm the deletion of an unavailabily slot.
+The unavailability delete page allows you to confirm the deletion of an
+unavailabily slot.
 
-Clicking "Yes" will delete the unavailability slot and send you to the unavailability week of the unavailability that was deleted.
+Clicking "Yes" will delete the unavailability slot and send you to the
+unavailability week of the unavailability that was deleted.
 
-Clicking "No" will cancel the deletion and send you to the unavailability week of the unavailability.
+Clicking "No" will cancel the deletion and send you to the unavailability week
+of the unavailability.
 
 ## Team Member Unavailability Clear
 
 ![The team member unavailability week clear page](./images/unavailability_clear.png)
 
-The unavailability week clear pages allows you to confirm the deletion of all the unavailability slots of a team member during a week.
+The unavailability week clear pages allows you to confirm the deletion of all
+the unavailability slots of a team member during a week.
 
-Clicking "Yes" will delete all unavailability slots in the week and send you back to the unavailability week.
+Clicking "Yes" will delete all unavailability slots in the week and send you
+back to the unavailability week.
 
-Clicking "No" will cancel the deletion and send you back to the unavailability week.
+Clicking "No" will cancel the deletion and send you back to the unavailability
+week.
