--- a/user-guides/src/6.1_time_slots.md
+++ b/user-guides/src/6.1_time_slots.md
@@ -1,6 +1,7 @@
 # Time Slots
 
-The time slot pages allow you to manage everything about individual time slots, including their context, date, time, assignee, and note.
+The time slot pages allow you to manage everything about individual time slots,
+including their context, date, time, assignee, and note.
 
 ## Time Slot Add
 
@@ -12,65 +13,77 @@ The time slot add page allows you to create a new time slot.
 
 The "Basic" section of the form requires basic information about the time slot:
 
-* The shift context
-* The date
-* The start time
-* The end time
-* Whether the time slot requires an adult
+- The shift context
+- The date
+- The start time
+- The end time
+- Whether the time slot requires an adult
 
 Only the shift context, date, and times are required.
 
 ### Assignee Section
 
-The "Assignee" section allows you to mark a time slot as unassigned or as assigned to a team member.
+The "Assignee" section allows you to mark a time slot as unassigned or as
+assigned to a team member.
 
-While you make changes to the Basic section of the form, the "Assignee" section will automatically update with assignee recommendation notifications.
+While you make changes to the Basic section of the form, the "Assignee" section
+will automatically update with assignee recommendation notifications.
 
 Each consideration column in the table means the following:
 
-* Adult - Whether the time slot requires an adult, and the potential assignee is an adult
-* Typically available - Whether the potential assignee is typically available during the date and time of the time slot
-* Not marked unavailable - The potential assignee is not marked unavailable during the date and time of the time slot
-* Prefer - The potential assignee prefers the shift context of the time slot
-* No conflicts - The potential assignee has not been scheduled during another time slot happening at the same time
-* Not external - The team member has not been marked as an external resource
+- Adult - Whether the time slot requires an adult, and the potential assignee is
+  an adult
+- Typically available - Whether the potential assignee is typically available
+  during the date and time of the time slot
+- Not marked unavailable - The potential assignee is not marked unavailable
+  during the date and time of the time slot
+- Prefer - The potential assignee prefers the shift context of the time slot
+- No conflicts - The potential assignee has not been scheduled during another
+  time slot happening at the same time
+- Not external - The team member has not been marked as an external resource
 
 In the table, the symbols have specific meanings for the consideration:
 
-* Hyphen (➖) - Neutral / Applicable
-* Question mark (❓) - Unknown
-* Red "X" (❌) - Negative
-* Green check mark (✅) - Positive
+- Hyphen (➖) - Neutral / Applicable
+- Question mark (❓) - Unknown
+- Red "X" (❌) - Negative
+- Green check mark (✅) - Positive
 
-For example, if a time slot requires an adult, but the date and time have not been specified, it is not possible to determine whether a team member would meet the age requirement.
+For example, if a time slot requires an adult, but the date and time have not
+been specified, it is not possible to determine whether a team member would meet
+the age requirement.
 
 ### Note Section
 
-The "Note" section allows you to optionally add a note and note color to the time slot.
+The "Note" section allows you to optionally add a note and note color to the
+time slot.
 
 You can also create and use a new color on the note:
 
 1. Select the radio button next to the bottom, "new" color option.
-2. Click on the black rectangle within the option.
-   This will open a color picker to pick the new color.
+2. Click on the black rectangle within the option. This will open a color picker
+   to pick the new color.
 3. Enter a unique name for the color in the "new" text box.
 
-When you successfully save the time slot, the color will be created and applied to the time slot note.
+When you successfully save the time slot, the color will be created and applied
+to the time slot note.
 
 ### Save and Cancel
 
-Clicking "Save" with valid data will create the time slot and send you to the schedule week of the newly created time slot.
-If you enter invalid data, the form will display errors that you can correct.
-You can then attempt to save the time slot again.
+Clicking "Save" with valid data will create the time slot and send you to the
+schedule week of the newly created time slot. If you enter invalid data, the
+form will display errors that you can correct. You can then attempt to save the
+time slot again.
 
-Clicking "Cancel" at any time will discard the data you have entered and return you to the schedule week.
+Clicking "Cancel" at any time will discard the data you have entered and return
+you to the schedule week.
 
 ## Time Slot Edit
 
 ![The time slot edit page](./images/time_slot_edit.png)
 
-The time slot edit page allows you to edit an existing time slot.
-It works similarly to the [time slot add page](#time-slot-add).
+The time slot edit page allows you to edit an existing time slot. It works
+similarly to the [time slot add page](#time-slot-add).
 
 ## Time Slot Delete
 
@@ -78,6 +91,8 @@ It works similarly to the [time slot add page](#time-slot-add).
 
 The time slot delete page allows you to confirm the deletion of a time slot.
 
-Clicking "Yes" will delete the time slot and send you to the original schedule week of the time slot.
+Clicking "Yes" will delete the time slot and send you to the original schedule
+week of the time slot.
 
-Clicking "No" will cancel the deletion and send you to the original schedule week of the time slot.
+Clicking "No" will cancel the deletion and send you to the original schedule
+week of the time slot.
