Update user guides

--- a/user-guides/src/3.2_preferences.md
+++ b/user-guides/src/3.2_preferences.md
@@ -7,12 +7,12 @@ context preferences.
 
 For each shift context, you have three options to select from:
 
-- The first column (sad face) indicates the team member perfers not to work in
-  the shift context.
-- The second column (neutral face) indicates the team member has not expressed a
-  preference regarding the shift context.
-- The third column (happy face) indicates the team member prefers to work in
-  this shift context.
+1. ☹️ (sad face) - Indicates the team member prefers not to work in the shift
+   context
+2. 😐 (neutral face) - Indicates the team member has not expressed a preference
+   regarding the shift context
+3. 🙂 (happy face) - Indicates the team member prefers to work in this shift
+   context
 
 Clicking "Save" will save your changes and return you to the team member profile
-page. Navigating away from the page will discard your changes.
+page. Navigating away from this page will discard any changes.
