--- a/user-guides/src/3.4_unavailability.md
+++ b/user-guides/src/3.4_unavailability.md
@@ -3,7 +3,7 @@
 The unavailability section of the team member pages allow you to specify dates
 and times a team member is unavailable.
 
-Note that this _overrides_ a team member's
+Note: Unavailability _overrides_ a team member's
 [typical availability](./3.3_availability.md).
 
 ## Team Member Unavailability Year
@@ -13,69 +13,69 @@ Note that this _overrides_ a team member's
 The team member unavailability tab will bring you to an unavailability calendar
 for the current year.
 
-The top of the schedule displays the year of the calendar. Clicking the year to
-the left of center year will show the calender for the prior year. Clicking the
-year to the right of the center year will show the calendar for the next year.
+The top of the calendar displays its year. Clicking the year to the left of the
+center year will show the calender for the prior year. Clicking the year to the
+right of the center year will show the calendar for the next year.
 
-The calendar is arranged by month and shows the day of the week for each day of
-the month. The current date will be also be highlighted in the calendar.
+The calendar is arranged by month, showing all days within each month. The
+current date will also be highlighted within the calendar.
 
 Clicking on a date in the calendar will bring you to the team member's
-unavailability for the week of that date.
+unavailability list for the week containing that date.
 
 ## Team Member Unavailability Week
 
 ![The team member unavailability week page](./images/unavailability_week.png)
 
 The unavailability week page lists a team member's unavailability slots for a
-week.
+given week. It works similarly to the
+[team member availability list](3.3_availability.md#team-member-availability-list).
 
 The buttons near the top have the following functions:
 
-- Week header - Sends you to the unavailability calendar year page for the year
-  the week starts in
-- Left angle bracket - Sends you to the team member's unavailability for the
-  previous week
-- Right angle bracket - Sends you to the team member's unavailability for the
-  next week
-- Clear button - Opens a form to confirm you want to delete all the team
-  member's unavailability slots for the week
+- Week header - Sends you to the unavailability calendar page for the year the
+  week starts in
+- Left angle bracket (<) - Sends you to the team member's unavailability list
+  for the previous week
+- Right angle bracket (>) - Sends you to the team member's unavailability list
+  for the next week
+- Clear button - Asks to confirm the deletion of all unavailability slots for
+  the team member within the current week
 
-Unavailablity slots are grouped and ordered by date, and then ordered by start
+Unavailability slots are grouped and ordered by date and then ordered by start
 time. If a date does not have unavailability slots, the section will be marked
 with "(none)".
 
-Each unavailability entry contains the following:
+Each unavailability slot card contains some information and buttons to work with
+the unavailability:
 
-- Left: The start time and end time of the unavailability
-- Center: An icon indicating the team member's preference for the unavailability
-  - A smiley face means the team member might be willing to be called in at the
-    time.
-  - A sad face face means the team member is definitely unavailable.
-- Right: Buttons for modifying the unavailability slot
-  - Clicking the pencil icon will open a form for editing the unavailability
-    slot.
-  - Clicking the red "x" icon will open a form to confirm you want to delete the
-    unavailability slot.
+- Start and end time (left) - The time range of the unavailability slot
+- Face icon (middle) - Indicates whether the unavailability slot is preferable
+  - 🙂 (happy face) - Indicates the unavailability slot is preferred
+  - ☹️ (sad face) - Indicates the unavailability slot is not preferred
+- ✏️ Pencil button (right) - Allows you to edit the unavailability slot
+- ❌ Red "x" button (right) - Asks to confirm the deletion of the unavailability
+  slot
 
 ## Team Member Unavailability Add
 
 ![The team member unavailability add page](./images/unavailability_add.png)
 
-The unavailability add form allows you create an unavailability slot for a team
-member. The fields include:
+The unavailability add form allows you to create an unavailability slot for a
+team member. The fields include:
 
 - The date
 - The start time
 - The end time
-- Whether the team member might be willing to be called in
+- Whether the unavailability slot is preferred (e.g. the team member might be
+  willing to be called in)
 
 (The date and times are required.)
 
-Clicking "Save" with valid data will create the unavailability slot for the team
-member and send you to the unavailability week for the newly added
-unavailability. If the data is invalid, the form will display errors you can
-correct. You can then attempt to save again.
+Clicking "Save" with valid information will create the unavailability slot for
+the team member and send you to the unavailability week of the newly added
+unavailability slot. If the information is invalid, the form will display errors
+you can correct. You can then attempt to save again.
 
 Clicking "Cancel" at any time will discard your changes and send you back to the
 unavailability week for the date the unavailability was originally going to be
@@ -87,35 +87,35 @@ created for.
 
 The unavailability edit page allows you to edit an existing unavailability slot.
 It works very similarly to the
-[unavailability add](#team-member-unavailability-add) page.
+[unavailability add page](#team-member-unavailability-add).
 
-Clicking "Save" with valid data will update the unavailability slot and send you
-to the unavailability week of the updated unavailability. If the data is
-invalid, the form will display errors you can correct. You can then attempt to
-save again.
+Clicking "Save" with valid information will update the unavailability slot and
+send you to the unavailability week containing the updated unavailability slot.
+If the information is invalid, the form will display errors you can correct. You
+can then attempt to save again.
 
 Clicking "Cancel" at any time will discard your changes and send you back to the
-original unavailability week of the unavailability.
+original unavailability week of the unavailability slot.
 
 ## Team Member Unavailability Delete
 
 ![The team member unavailability delete page](./images/unavailability_delete.png)
 
 The unavailability delete page allows you to confirm the deletion of an
-unavailabily slot.
+unavailability slot.
 
 Clicking "Yes" will delete the unavailability slot and send you to the
-unavailability week of the unavailability that was deleted.
+unavailability week containing the unavailability slot that was deleted.
 
 Clicking "No" will cancel the deletion and send you to the unavailability week
-of the unavailability.
+containing the unavailability slot.
 
 ## Team Member Unavailability Clear
 
 ![The team member unavailability week clear page](./images/unavailability_clear.png)
 
-The unavailability week clear pages allows you to confirm the deletion of all
-the unavailability slots of a team member during a week.
+The unavailability week clear page allows you to confirm the deletion of all the
+unavailability slots for a team member within a given week.
 
 Clicking "Yes" will delete all unavailability slots in the week and send you
 back to the unavailability week.
