--- a/user-guides/src/3.3_availability.md
+++ b/user-guides/src/3.3_availability.md
@@ -1,55 +1,53 @@
 # Team Member Availability
 
-The team member availability pages allows you to edit when a team member is
+The team member availability pages allow you to edit when a team member is
 available during a typical week.
 
-Note that when a team member is marked typically available at a given time, but
-they are also marked [unavailable](./3.4_unavailability.md), the team member is
-considered unavailable.
+Note: [Unavailability](3.4_unavailability.md) _overrides_ a team member's
+typical availability.
 
 ## Team Member Availability List
 
 ![The team member availability list page](./images/availability_list.png)
 
-The availability list page shows time slots the team member is availabile,
-grouped and ordered by day of the week.
+The availability list page shows time ranges when a team member is available,
+grouped and ordered by day of the week and then ordered by time.
 
 If a team member is not available on a given day of the week, the day of the
-week will show "(none)". Otherwise, the availability time slots will be listed
-under the day of the week.
+week will show "(none)". Otherwise, the availability slots for the team member
+on that day will be listed.
 
-Clicking the plus button next to a day of the week will allow you to create an
-availability time slot for that day of the week.
+Clicking the plus button (+) next to a day of the week will allow you to create
+an availability slot for the team member on that day of the week.
 
-An availability time slot card includes some information and buttons.
+An availability time slot card includes some information and buttons:
 
-- The start and end times for the availability slot on the given day are printed
-  on the left.
-- The icon in the middle indicates whether this availbility slot is preferable.
-  - A happy face means the availability is preferable.
-  - A sad face means the availability is not preferable.
-- Clicking the pencil icon will allow you to edit that availability slot.
-- Clicking the red "x" icon will bring you to a confirmation form to delete the
-  availability slot.
+- Start and end time (left) - The time range for the availability slot on the
+  given day
+- Face icon (middle) - Indicates whether the availability slot is preferable
+  - 🙂 (happy face) - Indicates the availability slot is preferred
+  - ☹️ (sad face) - Indicates the availability slot is not preferred
+- ✏️ Pencil button (right) - Allows you to edit the availability slot
+- ❌ Red "x" button (right) - Asks to confirm the deletion of the availability
+  slot
 
 ## Team Member Availability Add
 
 ![The team member availability add page](./images/availability_add.png)
 
 The availability add page allows you to create an availability slot for a team
-member. Here, you can enter:
+member. The fields include:
 
-- The day of the week of the typical availability (Sunday through Saturday)
-- The start time of the slot
-- The end time of the slot
+- The day of the week (Sunday through Saturday)
+- The start time
+- The end time
 - Whether the availability is preferable
 
 (All fields are required.)
 
-If you enter valid data and click "Save", the availability slot for the team
-member will be saved, and you will be sent back to the availability list page.
-If your data is invalid, the form will display errors and allow you to correct
-them.
+Clicking "Save" with valid information will create the availability slot for the
+team member, and you will be sent to the team member's availability list page.
+If the information is invalid, the form will display errors you can correct.
 
 Clicking "Cancel" at any point will discard your data and return you to the
 availability list page.
@@ -58,13 +56,12 @@ availability list page.
 
 ![The team member availability edit page](./images/availability_edit.png)
 
-The availability edit page allows you to edit an existing slot of typical
-availability. It works similarly to the
-[availability add page](#team-member-availability-add).
+The availability edit page allows you to edit an existing availability slot. It
+works similarly to the [availability add page](#team-member-availability-add).
 
-Clicking "Save" with valid data will update the availability slot and return you
-to the team member's availability list. If the data is invalid, the form will
-display errors and allow you to correct them.
+Clicking "Save" with valid information will update the availability slot and
+return you to the team member's availability list. If the information is
+invalid, the form will display errors that you can correct.
 
 Clicking "Cancel" at any point will discard your changes and return you to the
 availability list page.
@@ -77,5 +74,7 @@ The availability delete page allows you to confirm the deletion of an
 availability slot.
 
 Clicking "Yes" will delete the availability slot and return you to the team
-member's availability list. Clicking "No" will cancel the deletion and return
-you to the team member's availability list.
+member's availability list.
+
+Clicking "No" will cancel the deletion and return you to the team member's
+availability list.
