Update time slots user guides

--- a/user-guides/src/6.1_time_slots.md
+++ b/user-guides/src/6.1_time_slots.md
@@ -9,74 +9,100 @@ including their context, date, time, assignee, and note.
 
 The time slot add page allows you to create a new time slot.
 
+Note: Some links in the application pre-populate most of this information for
+you under certain conditions, such as
+[new time slot buttons](6_schedule.md#shift-contexts-and-time-slots). It is also
+possible to bulk copy time slots using the
+[copy time slots page](6_schedule.md#copy-time-slots).
+
 ### Basic Section
 
-The "Basic" section of the form requires basic information about the time slot:
+The "Basic" section requires basic information about the time slot:
 
-- The shift context
-- The date
-- The start time
-- The end time
+- Shift context
+- Date
+- Start time
+- End time
 - Whether the time slot requires an adult
 
 Only the shift context, date, and times are required.
 
 ### Assignee Section
 
-The "Assignee" section allows you to mark a time slot as unassigned or as
-assigned to a team member.
+The "Assignee" section allows you to assign the time slot to a team member (or
+leave the time slot unassigned).
 
-While you make changes to the Basic section of the form, the "Assignee" section
-will automatically update with assignee recommendation notifications.
+While you make changes to the ["Basic" section](#basic-section), the "Assignee"
+section will automatically update with assignee recommendation details. Each row
+corresponds to a potential assignee (e.g. a team member). Each column represents
+a status relating the potential assignee with the given time slot:
 
-Each consideration column in the table means the following:
-
-- Adult - Whether the time slot requires an adult, and the potential assignee is
-  an adult
+- Adult - Whether the potential assignee meets the time slot's age requirements
 - Typically available - Whether the potential assignee is typically available
-  during the date and time of the time slot
+  during the time of the time slot
 - Not marked unavailable - The potential assignee is not marked unavailable
-  during the date and time of the time slot
+  during the time of the time slot
 - Prefer - The potential assignee prefers the shift context of the time slot
-- No conflicts - The potential assignee has not been scheduled during another
-  time slot happening at the same time
-- Not external - The team member has not been marked as an external resource
+- No conflicts - The potential assignee has not been scheduled during a
+  concurrent time slot
+- Not external - The team member is not an external resource
 
-In the table, the symbols have specific meanings for the consideration:
+Symbols at the intersection of team member rows and status information columns
+indicate whether the team member meets the status condition:
 
-- Hyphen (➖) - Neutral / Applicable
+- Hyphen (➖) - Neutral / Non-Applicable
 - Question mark (❓) - Unknown
 - Red "X" (❌) - Negative
 - Green check mark (✅) - Positive
 
-For example, if a time slot requires an adult, but the date and time have not
-been specified, it is not possible to determine whether a team member would meet
-the age requirement.
+For example:
+
+- Suppose a time slot does not require an adult. The "Adult" status for every
+  team member will be neutral/non-applicable because there is no age
+  requirement.
+- Suppose a time slot requires an adult, but the time slot's date and time have
+  not been specified. The "Adult" status for every team member will be unknown
+  because while there is an age requirement, the age of any team member at the
+  time of the time slot cannot be calculated.
+- Suppose a time slot requires an adult, and the time slot's date and time have
+  been specified. The "Adult" status for every team member will be positive or
+  negative depending on whether they meet the age requirement at the time of the
+  time slot.
 
 ### Note Section
 
-The "Note" section allows you to optionally add a note and note color to the
-time slot.
+The "Note" section allows you to optionally add a note to the time slot. The
+fields include:
 
-You can also create and use a new color on the note:
+- Note - The content of the note
+- Color - The color of the note
+
+You can also create and use a new color for the note:
 
 1. Select the radio button next to the bottom, "new" color option.
 2. Click on the black rectangle within the option. This will open a color picker
-   to pick the new color.
-3. Enter a unique name for the color in the "new" text box.
+   for selecting the new color.
+3. Enter a name for the color in the "new" text box. The name must be unique.
 
-When you successfully save the time slot, the color will be created and applied
-to the time slot note.
+When you successfully save the time slot, the new color will be created and
+applied to the time slot note.
 
-### Save and Cancel
+### Buttons
 
-Clicking "Save" with valid data will create the time slot and send you to the
-schedule week of the newly created time slot. If you enter invalid data, the
-form will display errors that you can correct. You can then attempt to save the
-time slot again.
+Clicking "Save" with valid information will:
 
-Clicking "Cancel" at any time will discard the data you have entered and return
-you to the schedule week.
+1. Create the time slot
+2. Redirect you to the
+   [schedule week editor](6_schedule.md#schedule-week-editor) for the week
+   containing the new time slot
+3. Bold the cell containing the new time slot and scroll to it in the schedule
+   week table
+
+If the information is invalid, the form will display errors you can correct. You
+can then attempt to save the time slot again.
+
+Clicking "Cancel" at any time will discard the information and return you to the
+[schedule week editor](6_shedule.md#schedule-week-editor).
 
 ## Time Slot Edit
 
@@ -91,8 +117,10 @@ similarly to the [time slot add page](#time-slot-add).
 
 The time slot delete page allows you to confirm the deletion of a time slot.
 
-Clicking "Yes" will delete the time slot and send you to the original schedule
-week of the time slot.
+Clicking "Yes" will delete the time slot and redirect you to the week within the
+[schedule week editor](6_schedule.md#schedule-week-editor) that originally
+contained the time slot.
 
-Clicking "No" will cancel the deletion and send you to the original schedule
-week of the time slot.
+Clicking "No" will abort the deletion and redirect you to the week within the
+[schedule week editor](6_schedule.md#schedule-week-editor) that contains the
+time slot.
