--- a/user-guides/src/6.2_shift_context_notes.md
+++ b/user-guides/src/6.2_shift_context_notes.md
@@ -3,13 +3,19 @@
 ![The shift context note edit form](./images/shift_context_note.png)
 
 The shift context note edit page allows you to edit the note for a shift context
-on a given day.
+on a given date.
 
-The date is read-only and states what date the note is for. Below that, you can
-choose a color for the note and then enter the content of the note.
+The date is read-only and indicates the date the note is for.
 
-Clicking "Save" will save the note and send you to the schedule week containing
-the note.
+The other fields include:
 
-Clicking "Cancel" will discard your changes and also send you to the schedule
-week containing the note.
+- Color - The color of the note
+- Note - The content of the note
+
+Clicking "Save" will save the note and redirect you to the week within the
+[schedule week editor](6_schedule.md#schedule-week-editor) containing the note.
+Saving an empty note is equivalent to deleting the note.
+
+Clicking "Cancel" will discard your changes and redirect you to the week within
+the [schedule week editor](6_schedule.md#schedule-week-editor) where the note
+would have been saved.
