Update substitutes user guides

--- a/user-guides/src/6.3_substitutes.md
+++ b/user-guides/src/6.3_substitutes.md
@@ -2,14 +2,16 @@
 
 ![The substitutes edit page](./images/substitutes.png)
 
-The substitutes edit page allows you to specify the substitutes for a given day.
+The substitutes edit page allows you to specify the substitutes on a given date.
 
-The date is read-only and specifies what day the substitute list is for. Below
-that, you can use the checkboxes to select which team members you want on the
-substitute list for that day. (You are not required to select any team members.)
+The date is read-only and indicates what date the substitute list is for. The
+checkboxes allow you to select which team members you want on the substitute
+list for the date. (You are not required to select any team members.)
 
-Clicking "Save" will save your changes and return you to the schedule week
-containing the updated substitute list.
+Clicking "Save" will save your changes and redirect you to the week within the
+[schedule week editor](6_schedule.md#schedule-week-editor) containing the
+updated substitute list.
 
-Clicking "Cancel" will discard your changes and also return you to the schedule
-week containing the original substitute list.
+Clicking "Cancel" will discard your changes and redirect you to the week within
+the [schedule week editor](6_schedule.md#schedule-week-editor) containing the
+original substitute list.
