Improve shift context note functionality

--- a/user-guides/src/6.2_shift_context_notes.md
+++ b/user-guides/src/6.2_shift_context_notes.md
@@ -5,9 +5,7 @@
 The shift context note edit page allows you to edit the note for a shift context
 on a given date.
 
-The date is read-only and indicates the date the note is for.
-
-The other fields include:
+The shift context and date are read-only. The other fields include:
 
 - Color - The color of the note
 - Note - The content of the note
