Update user guides

--- a/user-guides/src/3.2_preferences.md
+++ b/user-guides/src/3.2_preferences.md
@@ -14,5 +14,7 @@ For each shift context, you have three options to select from:
 3. 🙂 (happy face) - Indicates the team member prefers to work in this shift
    context
 
-Clicking "Save" will save your changes and return you to the team member profile
-page. Navigating away from this page will discard any changes.
+Clicking "Save" will save your changes and display a notification that your
+changes have been saved. Clicking the red "x" on the message will dismiss it.
+
+Navigating away from this page without saving will discard your changes.
