--- a/user-guides/src/6.2_shift_context_notes.md
+++ b/user-guides/src/6.2_shift_context_notes.md
@@ -12,7 +12,7 @@ The shift context and date are read-only. The other fields include:
 
 Clicking "Save" will save the note and redirect you to the week within the
 [schedule week editor](6_schedule.md#schedule-week-editor) containing the note.
-Saving an empty note is equivalent to deleting the note.
+Saving a note without color or content is equivalent to deleting the note.
 
 Clicking "Cancel" will discard your changes and redirect you to the week within
 the [schedule week editor](6_schedule.md#schedule-week-editor) where the note
